Improved interface's logic

--- a/pages/manage/main.html
+++ b/pages/manage/main.html
@@ -30,14 +30,15 @@
   </head>
   <body style="background-color: rgba(0, 0, 0, 0); scroll-margin-top: 60px;" id="mainContent">
     <div id="loginContainer">
-      <h1 id="title">Login</h1>
-      <hr style="margin-bottom: 2rem;">
-      <form id="login">
+      <h1 id="title">Hi!</h1>
+      <hr>
+      <h2 id="subtitle">In order to continue you'll have to authenticate!</h2>
+      <div id="login">
         <div class="form-group" id="masterKeyContainer">
           <input type="password" class="form-control" name="masterKey" placeholder="Master Key" required="required" id="masterKeyInput">
         </div>
         <input class="btn btn-primary btn-block" type="submit" value="Login" id="submitButton">
-      </form>
+      </div>
     </div>
   </body>
 </html>
