--- a/pages/setup/main.html
+++ b/pages/setup/main.html
@@ -37,7 +37,7 @@
       <h1 id="title">SeekHub</h1>
       <hr>
       <h2 id="subtitle">Hi! Now you'll be asked some info to setup your brand new menu website!</h2>
-      <form id="setup">
+      <div id="setup">
         <div class="form-group" id="nameContainer">
           <label for="name" class="required">Local's name</label>
           <input type="text" class="form-control" name="name" placeholder="Name" required="required" id="nameInput" onchange="syncElementInput('nameInput', 'titleInput');">
@@ -81,7 +81,7 @@
           </div>
         </div>
         <input class="btn btn-primary btn-block" type="submit" value="Go!" id="submitButton">
-      </form>
+      </div>
     </div>
   </body>
 </html>
