--- a/pages/setup/main.html
+++ b/pages/setup/main.html
@@ -23,14 +23,20 @@
     <title>SeekHub</title>
     <link rel="canonical" href="">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body style="background-color: rgba(0, 0, 0, 0); scroll-margin-top: 60px;" id="mainContent">
     <noscript>
-      <style>#setupContainer { display: none; }</style>
+      <style>
+        #setupContainer { display: none; }
+        #opps { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); }
+        @media (prefers-color-scheme: dark) {
+          #opps { color: white; }
+        }
+        @media (prefers-color-scheme: light) {
+          #opps { color: black; }
+        }
+        </style>
       <h1 id="opps">Opps! without JS this page doesn't work! 😮</h1>
     </noscript>
     <div id="setupContainer">
