--- a/pages/setup.html
+++ b/pages/setup.html
@@ -1,6 +1,6 @@
 <!--
   SeekHub
-  Copyright (C) 2021 ItsTheGuy
+  Copyright (C) 2022 Oscar
 
   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
